--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -6,6 +6,7 @@ body {
 
 h1 {
 	text-align: center;
+	font-size:30px;
 }
 
 .header {
@@ -22,7 +23,7 @@ h1 {
 
 .navbar ul.navgation {
 	list-style-type: none;
-	padding-left:30px;
+	padding-left: 30px;
 }
 
 .navbar .navgation li, .footer-icon li {
@@ -81,3 +82,4 @@ h1 {
 .footer-icon:after {
 	left: 95%;
 }
+
