--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -6,11 +6,15 @@ body {
 
 h1 {
 	text-align: center;
-	font-size:30px;
+	font-size: 30px;
 }
 
 .header {
 	margin-bottom: 30px;
+}
+
+.bookingPage .booking .header {
+	margin-left: -30px;
 }
 
 .firstcontent {
@@ -82,4 +86,3 @@ h1 {
 .footer-icon:after {
 	left: 95%;
 }
-
