--- a/src/main/webapp/resources/css/Booking.css
+++ b/src/main/webapp/resources/css/Booking.css
@@ -1,36 +1,16 @@
 @charset "UTF-8";
-.clearfix::after {
-  display: block;
-  clear: both;
-  content: '';
-}
-
+/* Edit Bus */
 label{
   color: #6A6C89;
   font-size: 20px;
 }
-
-.left{
-  float: left;
-}
-.right{
-  float: right;
-}
-.container{
-  padding: 50px 0px;
-}
 h1{
   color: #003081;
-  margin-left: 25%;
   font-size: 44px;
+  text-align: center;
+  padding-top: 20px;
 }
-.bus-booking{
-  margin: 0 auto;
-  padding: 40px 50px;
-  margin: 0px 22%;
-  background-color: rgb(255,255,255,.5);
-}
-.search{
+.edit-btn{
   color: #ffffff;
   background-color: #484C8D;
   padding: 5px 30px;
@@ -39,4 +19,13 @@ h1{
 input{
   padding: 5px 40px;
   border-color: transparent;
+}
+
+.editbus,
+.editseat{
+	background-color: #7FB3D5;
+}
+.edit{
+	margin-left: 40%;
+	padding-bottom: 30px;
 }
