--- a/src/main/webapp/WEB-INF/layouts/views.xml
+++ b/src/main/webapp/WEB-INF/layouts/views.xml
@@ -3,10 +3,10 @@
     "-//Apache Software Foundation//DTD Tiles Configuration 3.0//EN"
     "http://tiles.apache.org/dtds/tiles-config_3_0.dtd">
 <tiles-definitions>
-	<definition name="home" extends="template">
+	<definition name="reservation" extends="template">
 		<put-attribute name="title" value="Reservation List"></put-attribute>
 		<put-attribute name="body"
-			value="/WEB-INF/pages/home.jsp"></put-attribute>
+			value="/WEB-INF/pages/reservation.jsp"></put-attribute>
 	</definition>
 	<definition name="adminPassenger" extends="template">
 		<put-attribute name="title" value="Passenger List" />
