--- a/src/main/webapp/WEB-INF/layouts/views.xml
+++ b/src/main/webapp/WEB-INF/layouts/views.xml
@@ -18,4 +18,9 @@
 		<put-attribute name="body"
 			value="/WEB-INF/pages/editReservation.jsp" />
 	</definition>
+	<definition name="busReport" extends="template">
+		<put-attribute name="title" value="Bus - Report" />
+		<put-attribute name="body"
+			value="/WEB-INF/pages/busReport.jsp" />
+	</definition>
 </tiles-definitions>
