--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -81,7 +81,7 @@
   color: #ffffff;
   border-color: transparent;
 }
-input{
+.inform{
   padding: 7px 0px;
   width: 220px;
   border-color: transparent;
